--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -16,8 +16,8 @@
     }
 
     div#yoga-discount-text h1 {
-        margin-top: 10px;
-        font-size: 34px;
+        margin-top: 10px !important;
+        font-size: 34px !important;
         font-weight: bold;
     }
 
@@ -28,8 +28,8 @@
     }
 
     div#yoga-breating-text h1 {
-        margin-top: 30px;
-        font-size: 30px;
+        margin-top: 30px !important;
+        font-size: 30px !important;
         font-weight: bold;
     }
 
@@ -50,9 +50,9 @@
     }
 
     div#bannertext h1 {
-        margin-top: 50px;
+        margin-top: 50px !important;
         margin-bottom: 30px;
-        font-size: 34px;
+        font-size: 34px !important;
         color: white;
     }
 
@@ -76,8 +76,8 @@
     }
 
     div#yoga-text h1 {
-        margin-top: 20px;
-        font-size: 34px;
+        margin-top: 20px !important;
+        font-size: 34px !important;
         font-weight: bold;
     }
 
